<resources>
    <string name="app_name">TennisTime</string>
    <string name="player">player</string>
    <string name="match">match</string>
    <string name="search">search</string>
    <string name="available">available</string>
    <string name="contact">contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="mail">mail</string>
    <string name="tennisclub">tennisclub ID</string>
    <string name="vtvnumber">vtv_number</string>
    <string name="ranking">ranking</string>
    <string name="start">start</string>
    <string name="einde">einde</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="call">call</string>

</resources>
